--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-router": "^3.0.1",
+    "vue2-simplert": "^0.7.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
