Add support for CORS as environment variable.

--- a/example.env
+++ b/example.env
@@ -7,4 +7,5 @@ MG_DOMAIN=
 MG_PUBLIC_API_KEY=
 MG_URL=
 CLIENT_URL=http://localhost:8080/
+CROSS_ORIGIN=http://localhost:8080,https://localhost:8080
 
