--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "simple-vue-validator": "^0.14.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
+    "vue-js-modal": "^1.3.12",
     "vue-router": "^3.0.1",
     "vue2-simplert": "^0.7.1",
     "vuex": "^3.0.1"
