--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "auth0-js": "^9.4.2",
     "axios": "^0.17.1",
     "simple-vue-validator": "^0.14.2",
     "vue": "^2.5.16",
