--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 DB=coral.db
-ADDR=8080
+ADDR=8085
 TIP_INTERVAL=86400
 MAIL_TO=
 MG_API_KEY=
@@ -8,4 +8,6 @@ MG_PUBLIC_API_KEY=
 MG_URL=
 CLIENT_URL=http://localhost:8080/
 CROSS_ORIGIN=http://localhost:8080,https://localhost:8080
-
+AUTH0_DOMAIN=
+AUTH0_AUDIENCE=
+AUTH0_PUBLIC_KEY_PATH=
